z-index fixed

--- a/src/components/ProfileMenu/_ProfileMenu.scss
+++ b/src/components/ProfileMenu/_ProfileMenu.scss
@@ -5,6 +5,7 @@
     justify-content: flex-start;
     align-items: center;
     cursor: pointer;
+    z-index: 7;
     h4 {
         color: white;
         margin:  0 1rem 0 0 ;
