--- a/src/components/Projects/_Projects.scss
+++ b/src/components/Projects/_Projects.scss
@@ -65,7 +65,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-
+            z-index: 8;
             .create-project {
                 width: 100%;
                 height: 100%;
