--- a/src/components/Tagging/_Tagging.scss
+++ b/src/components/Tagging/_Tagging.scss
@@ -119,11 +119,14 @@
 }
 
 .tagging {
+    height: 94vh;
+    max-height: 94vh;
+    overflow: hidden;
     .two-sections {
         display: flex;
         flex-direction: row;
          padding: 7px 7px 0 7px;
-         height: calc(100vh - 100px);
+         height: 100%;
         justify-content: space-between;
         .spectro-selection {
             width: 50%;
